 * Many bugfixes in the interface
 * Fix selection of some audio tracks
 * A sleep timer was added for audio and video
 * Added an option to add custom paths to the media library scanner
 * content:// based URIs from Camera and file pickers now supported
 * Fix video player resume of media outside the media library
 * Jump to Time feature

Translations:
 * Initial Traditional Chinese, Catalan, and Urdu translations
 * Updates to the Bosnian, Japanese, Russian, French, Korean,
   Simplified Chinese, Turkish, Thai, Slovak, Polish, Dutch, Khmer,
   Italian, Hebrew, Galician, Spanish, German, Czech,
   and Bosnian translations

Changes between 0.0.7 and 0.0.8:
--------------------------------

Core:
 * Support MIPS compilation

Main application:
 * SD cards mount points are auto-detected
 * Directory view starts from the SD cards and are live-detected
 * Improve the thumbnailing process
 * Improve the headset handling and remote control code, including bluetooth
 * Correctly support the lock screen controls
 * Fixes for Android 4.2 support
 * Fix for sound notification loudness
 * Fixes miscellaneous crashes and issues

Interface:
 * Allow toggling between remaining and total time in fullscreen
 * Allow a menu option to start the media from the beginning
 * Add different options for rotation and screen orientation
 * Fix sorting of album tracks
 * Add a ticker in the status bar, when playing audio
 * Improve the Directories View
 * Translations


Changes between 0.0.6 and 0.0.7:
--------------------------------

Core:
 * Fix audio output selection to fix the audio-sync

Main application:
 * reduce the memory used for thumbnails decoding
 * better behaviour when we are low on memory
 * fix the interaction between thumbnailing and sleeping
 * fix various crashes

Interface:
 * better multi-column look on low resolution phones
 * fix audio song sorting
 * add a popup-menu in the video list
 * Show Volume and Brightness values
 * fix navbar hiding on tablets

