@@ -51,7 +51,7 @@ public class EventManager {
     public static final int MediaPlayerEndReached             = 0x109;
     //public static final int MediaPlayerEncounteredError     = 0x10a;
     //public static final int MediaPlayerTimeChanged          = 0x10b;
-    //public static final int MediaPlayerPositionChanged      = 0x10c;
+    public static final int MediaPlayerPositionChanged        = 0x10c;
     //public static final int MediaPlayerSeekableChanged      = 0x10d;
     //public static final int MediaPlayerPausableChanged      = 0x10e;
     //public static final int MediaPlayerTitleChanged         = 0x10f;
